feat: v2.2 - переработка тарифов, защита от мультиаккаунтов и обновление документации
Основные изменения:
- Переработана тарифная сетка (новые лимиты токенов и цены)
- Добавлена защита от мультиаккаунтов (один DEMO токен на пользователя)
- Разделена генерация контента и изображений (чекбокс + кнопка)
- Переработан бот (оферта, политика, отказ от ответственности)
- Проработаны юридические документы (оферта, согласие, отказ)
- Обновлены Docker файлы для production деплоя
- Создан единый DEPLOYMENT_GUIDE.md с полной инструкцией
- Удалены неактуальные .md файлы по деплою

Технические детали:
- Миграция 0017: добавлено поле telegram_user_id в токены
- Обновлены bot.py и generator/views.py для защиты от мультиаккаунтов
- Обновлены тарифы в generator/tariffs.py
- Добавлена страница /disclaimer/ в веб-приложение
- Обновлены docker-compose файлы (версия 2.2)

--- a/Dockerfile.bot
+++ b/Dockerfile.bot
@@ -8,8 +8,8 @@ FROM python:3.11-slim
 
 # Метаданные
 LABEL maintainer="Ghostwriter Team"
-LABEL version="2.0"
-LABEL description="Ghostwriter Telegram Bot - Automatic Token Generation"
+LABEL version="2.2"
+LABEL description="Ghostwriter Telegram Bot - Automatic Token Generation with Anti-Multiaccount Protection"
 
 # Установка системных зависимостей
 RUN apt-get update && apt-get install -y --no-install-recommends \
