--- a/env.example
+++ b/env.example
@@ -76,11 +76,19 @@ FLASK_EXTERNAL_URL=https://your-flask-server.com
 # Токен Telegram бота (получить у @BotFather: https://t.me/BotFather)
 TELEGRAM_BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz
 
-# Токен публичного бота (для публичной версии с офертой)
-TELEGRAM_BOT_TOKEN_PUBLIC=1234567890:PublicBotToken
+# Username бота (без @, для return URL после оплаты)
+BOT_USERNAME=ghostwriter_bot
 
-# Telegram владельца/разработчика для перенаправления клиентов (бета-тест)
+# Telegram владельца/разработчика для перенаправления клиентов
 OWNER_TELEGRAM=@rain511
+
+# Реквизиты исполнителя (для публичной оферты)
+EXECUTOR_FULL_NAME=ФИО полностью
+EXECUTOR_INN=123456789012
+EXECUTOR_PHONE=+7 (999) 123-45-67
+EXECUTOR_EMAIL=your-email@example.com
+EXECUTOR_TELEGRAM=@username
+EXECUTOR_CITY=Москва, Россия
 
 # URL для webhook (HTTPS обязателен в production!)
 # Формат: https://yourdomain.com/telegram/webhook/
@@ -125,6 +133,24 @@ TOKEN_DELETE_AFTER_DAYS=90
 
 # Часовой пояс для планировщика задач
 TZ=Europe/Moscow
+
+# =============================================================================
+# ПЛАТЁЖНЫЕ СИСТЕМЫ
+# =============================================================================
+
+# ЮКасса (основная платёжная система)
+# Получить: https://yookassa.ru → Личный кабинет → Интеграция → Ключи API
+# Webhook URL: https://yourdomain.com/generator/api/payments/yookassa/webhook/
+YOOKASSA_SHOP_ID=your-shop-id
+YOOKASSA_SECRET_KEY=your-secret-key
+
+# Тинькофф Касса (резервная, опционально)
+# Получить: https://kassa.tinkoff.ru → Терминалы → Настройки
+# TINKOFF_TERMINAL_KEY=your-terminal-key
+# TINKOFF_PASSWORD=your-password
+
+# Цены тарифов задаются в generator/tariffs.py
+# При необходимости можно переопределить через переменные окружения (не реализовано)
 
 # =============================================================================
 # PRODUCTION ONLY (Установите для production)
