--- a/env.production.example
+++ b/env.production.example
@@ -60,10 +60,10 @@ GENERATOR_ENCRYPTION_KEY=CHANGE_ME_TO_FERNET_KEY
 # Получите у @BotFather
 TELEGRAM_BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz
 
-# Токен публичного бота (для публичной версии с офертой)
-TELEGRAM_BOT_TOKEN_PUBLIC=1234567890:PublicBotToken
+# Username бота (без @, для return URL после оплаты)
+BOT_USERNAME=ghostwriter_bot
 
-# Telegram владельца/разработчика для перенаправления клиентов (бета-тест)
+# Telegram владельца/разработчика для перенаправления клиентов
 OWNER_TELEGRAM=@rain511
 
 # Секрет для webhook (сгенерируйте: openssl rand -hex 32)
@@ -71,6 +71,41 @@ TELEGRAM_WEBHOOK_SECRET=CHANGE_ME_TO_RANDOM_64_CHAR_HEX
 
 # URL вашего сайта (без trailing slash)
 SITE_URL=https://yourdomain.com
+
+# API ключ для связи Django-Bot (опционально, для дополнительной безопасности)
+# Если не указан, бот будет работать без API ключа
+DJANGO_API_KEY=
+
+# Реквизиты исполнителя (для публичной оферты)
+EXECUTOR_FULL_NAME=ФИО полностью
+EXECUTOR_INN=123456789012
+EXECUTOR_PHONE=+7 (999) 123-45-67
+EXECUTOR_EMAIL=your-email@example.com
+EXECUTOR_TELEGRAM=@username
+EXECUTOR_CITY=Москва, Россия
+
+# =============================================================================
+# ПЛАТЁЖНЫЕ СИСТЕМЫ (ОБЯЗАТЕЛЬНО для приёма платежей)
+# =============================================================================
+
+# ЮКасса (основная)
+# Получить: https://yookassa.ru → Личный кабинет → Интеграция → Ключи API
+# Webhook URL для настройки в ЮКасса: https://yourdomain.com/api/payments/yookassa/webhook/
+YOOKASSA_SHOP_ID=your-shop-id
+YOOKASSA_SECRET_KEY=your-secret-key
+
+# Тинькофф Касса (резервная, опционально)
+# TINKOFF_TERMINAL_KEY=your-terminal-key
+# TINKOFF_PASSWORD=your-password
+
+# API ключ для связи Django-Bot (опционально, для дополнительной безопасности)
+# DJANGO_API_KEY=your-api-key-here
+
+# Цены тарифов задаются в generator/tariffs.py:
+# - Бесплатный старт: 0₽ (30K GigaChat + 30K OpenAI, бессрочно)
+# - Базовый: 590₽/мес (200K GigaChat + 100K OpenAI, 30 дней)
+# - Про: 1190₽/мес (500K GigaChat + 200K OpenAI, 30 дней)
+# - Безлимит: 2490₽/мес (∞ GigaChat + 500K OpenAI, 30 дней)
 
 # =============================================================================
 # HTTPS (ОБЯЗАТЕЛЬНО для production)
