--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,11 @@ gigachat>=0.1.0
 python-telegram-bot==20.7
 
 # =============================================================================
+# ПЛАТЁЖНЫЕ СИСТЕМЫ
+# =============================================================================
+yookassa>=3.0.0
+
+# =============================================================================
 # HTTP & NETWORKING
 # =============================================================================
 requests>=2.31.0
