--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,9 @@ venv.bak/
 .dev_token
 *_dev_token*
 
+# Bot terms acceptance tracking
+terms_accepted.json
+
 # Spyder project settings
 .spyderproject
 .spyproject
