feat: обновление модели OpenAI до GPT-4o-mini в Flask генераторе
- Изменена модель по умолчанию с GPT-3.5-turbo на GPT-4o-mini
- Обновлены text_gen.py и image_gen.py для использования GPT-4o-mini
- Добавлена поддержка переменной окружения OPENAI_MODEL
- Обновлены Docker файлы для Flask генератора (версия 2.2)
- Обновлена документация (README.md, env.example, DEPLOYMENT_GUIDE.md)

--- a/env.example
+++ b/env.example
@@ -117,7 +117,7 @@ DJANGO_API_URL=http://django:8000
 # =============================================================================
 
 # OpenAI модели
-OPENAI_MODEL=gpt-3.5-turbo
+OPENAI_MODEL=gpt-4o-mini
 DALLE_MODEL=dall-e-3
 
 # Таймауты и лимиты
