--- a/env.production.example
+++ b/env.production.example
@@ -119,5 +119,5 @@ USE_HTTPS=true
 
 # OPENAI_API_KEY=sk-your-openai-api-key
 # GENERATOR_ENCRYPTION_KEY=same-as-django-server
-# OPENAI_MODEL=gpt-4
+# OPENAI_MODEL=gpt-4o-mini
 # DALLE_MODEL=dall-e-3
