feat: гибридная техподдержка и отзывы + production деплой 2.3
Бот:
- Главное меню: Тарифы и оплата, Мои токены, Техподдержка (ссылка в группу), Оставить отзыв
- Форма отзыва в боте с сохранением в Django (модерация в админке)
- Обработка группы: автоответы по ключевым словам, /support → тикет + предложение написать в личку
- create_token_via_api: передача telegram_user_id в API
- Переменные: TELEGRAM_SUPPORT_GROUP_URL, TELEGRAM_ADMIN_IDS

Django:
- Модели: SupportTicket, Review, SupportChat
- API: POST /api/support/create/, POST /api/reviews/create/, GET /api/support/stats/
- Регистрация в админке (тикеты, отзывы с одобрением/отклонением, чаты)
- Миграция 0018_support_reviews

Production:
- docker-compose.production.yml: версия 2.3, env бота (support group, admin ids)
- Dockerfile.bot: yookassa, версия 2.3
- env.production.example: TELEGRAM_SUPPORT_GROUP_URL, TELEGRAM_ADMIN_IDS, комментарий webhook
- DEPLOYMENT_GUIDE.md: пошаговое руководство деплоя на облачном сервере
- requirements.txt: комментарий о покрытии зависимостей
- TELEGRAM_SUPPORT_SETUP.md: настройка группы поддержки и отзывов в Telegram

--- a/Dockerfile.bot
+++ b/Dockerfile.bot
@@ -1,15 +1,16 @@
 # =============================================================================
 # GHOSTWRITER - Telegram Bot Dockerfile
 # =============================================================================
-# Отдельный контейнер для Telegram бота (polling mode)
+# Отдельный контейнер для Telegram бота (polling mode).
+# Зависимости: только нужные для бота (без Django).
 # =============================================================================
 
 FROM python:3.11-slim
 
 # Метаданные
 LABEL maintainer="Ghostwriter Team"
-LABEL version="2.2"
-LABEL description="Ghostwriter Telegram Bot - Automatic Token Generation with Anti-Multiaccount Protection"
+LABEL version="2.3"
+LABEL description="Ghostwriter Telegram Bot - Tokens, Payments, Support, Reviews"
 
 # Установка системных зависимостей
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -24,10 +25,13 @@ RUN groupadd --system botuser \
 # Установка рабочей директории
 WORKDIR /app
 
-# Копирование requirements и установка зависимостей
-COPY requirements.txt .
+# Установка только зависимостей бота (без Django/DB)
 RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir python-telegram-bot==20.7 requests python-dotenv
+    && pip install --no-cache-dir \
+        python-telegram-bot==20.7 \
+        requests>=2.31.0 \
+        python-dotenv>=1.0.0 \
+        yookassa>=3.0.0
 
 # Копирование только необходимых файлов для бота
 COPY --chown=botuser:botuser bot.py .
