--- a/env.example
+++ b/env.example
@@ -112,6 +112,19 @@ SITE_URL=http://localhost:8000
 # Standalone: http://localhost:8000
 DJANGO_API_URL=http://django:8000
 
+# Ключ API для запросов бота к Django (опционально, для защиты)
+# DJANGO_API_KEY=your-secret-api-key
+
+# Группа техподдержки и отзывов (ссылка-приглашение или t.me/c/...)
+# Бот должен быть добавлен в группу как администратор для автоответов и /support
+TELEGRAM_SUPPORT_GROUP_URL=https://t.me/your_support_group
+
+# Опционально: канал для публикации одобренных отзывов
+# TELEGRAM_REVIEWS_GROUP_URL=https://t.me/your_reviews_channel
+
+# ID админов Telegram (через запятую) для уведомлений о тикетах
+# TELEGRAM_ADMIN_IDS=123456789,987654321
+
 # =============================================================================
 # ДОПОЛНИТЕЛЬНЫЕ НАСТРОЙКИ AI
 # =============================================================================
