--- a/env.production.example
+++ b/env.production.example
@@ -69,12 +69,22 @@ OWNER_TELEGRAM=@rain511
 # Секрет для webhook (сгенерируйте: openssl rand -hex 32)
 TELEGRAM_WEBHOOK_SECRET=CHANGE_ME_TO_RANDOM_64_CHAR_HEX
 
+# URL webhook (опционально; бот в production по умолчанию работает в polling)
+# TELEGRAM_WEBHOOK_URL=https://yourdomain.com/telegram/webhook/
+
 # URL вашего сайта (без trailing slash)
 SITE_URL=https://yourdomain.com
 
 # API ключ для связи Django-Bot (опционально, для дополнительной безопасности)
 # Если не указан, бот будет работать без API ключа
 DJANGO_API_KEY=
+
+# Группа техподдержки (ссылка или https://t.me/username_группы)
+# Нужна для кнопки «Техподдержка» в боте и автоответов в группе
+TELEGRAM_SUPPORT_GROUP_URL=https://t.me/your_support_group
+
+# ID админов Telegram через запятую (опционально, для уведомлений)
+# TELEGRAM_ADMIN_IDS=123456789,987654321
 
 # Реквизиты исполнителя (для публичной оферты)
 EXECUTOR_FULL_NAME=ФИО полностью
