--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 # =============================================================================
 # ОСНОВНЫЕ ЗАВИСИМОСТИ GHOSTWRITER
 # =============================================================================
+# Покрывает: Django-приложение, Telegram-бот (меню, тарифы, поддержка, отзывы),
+#            GigaChat/OpenAI, ЮКасса, планировщик, БД, production-сервер.
 # Установка: pip install -r requirements.txt
 
 # =============================================================================
@@ -62,3 +64,5 @@ django-redis>=5.4.0
 # PRODUCTION SERVER
 # =============================================================================
 gunicorn>=21.2.0
+
+Pillow==10.2.0
